Added some parameters

--- a/G48-A2.ipynb
+++ b/G48-A2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Existing dirty_cafe_sales.csv found. Deleting and re-extracting...\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
-      "100  110k  100  110k    0     0   269k      0 --:--:-- --:--:-- --:--:--  269k\n"
+      "100  110k  100  110k    0     0   223k      0 --:--:-- --:--:-- --:--:-- 1844k\n"
      ]
     },
     {
@@ -58,7 +59,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Check if the CSV file exists, otherwise raise an error\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(csv_path):\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcsv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Ensure the file is downloaded and extracted.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Loading in the dataset\u001b[39;00m\n\u001b[1;32m     15\u001b[0m cafeSet \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_path)\n",
+      "Cell \u001b[0;32mIn[110], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Check if the CSV file exists, otherwise raise an error\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(csv_path):\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcsv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Ensure the file is downloaded and extracted.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Loading in the dataset\u001b[39;00m\n\u001b[1;32m     15\u001b[0m cafeSet \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_path)\n",
       "\u001b[0;31mFileNotFoundError\u001b[0m: Dataset not found: dirty_cafe_sales.csv. Ensure the file is downloaded and extracted."
      ]
     }
@@ -86,20 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Parameters"
+    "### Parameters"
    ]
   },
   {
@@ -220,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,8 +243,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,8 +304,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Please enter the various attrivutes below to perform the data cleaning process on the dataset. \n",
+    "# Input your column \n",
+    "column = \"Transaction Date\"\n",
+    "pattern = r'^\\d{4}-\\d{2}-\\d{2}$'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -350,10 +363,7 @@
     "        print(mismatched_rows.head(2))  # Show first 2 rows\n",
     "\n",
     "# Example usage:\n",
-    "# Assuming 'cafeSet' is your DataFrame and 'date_added' is the column to check\n",
-    "# The pattern for date in \"YYYY-MM-DD\" format\n",
-    "date_pattern = r'^\\d{4}-\\d{2}-\\d{2}$'\n",
-    "format_checker(cafeSet, 'Transaction Date', date_pattern)"
+    "format_checker(cafeSet, column, pattern)"
    ]
   },
   {
@@ -364,6 +374,22 @@
     "\n",
     "A Consistency Check is a type of logical check that ensures data is entered in a logically consistent manner. Checking if the delivery date for a parcel is after the shipping date is one example\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Please enter the various attrivutes below to perform the data cleaning process on the dataset. "
    ]
   },
   {
@@ -425,6 +451,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testColumn = 'Transaction ID'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -464,8 +506,7 @@
     "    return duplicates\n",
     "\n",
     "# Example usage:\n",
-    "duplicates = uniqueness_checker(cafeSet, 'Transaction ID')\n",
-    "\n"
+    "duplicates = uniqueness_checker(cafeSet, testColumn)"
    ]
   },
   {
@@ -478,8 +519,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testColumn = 'Item'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +579,7 @@
     "\n",
     "\n",
     "# Example usage:\n",
-    "missing_values = presence_checker(cafeSet, 'Item')"
+    "missing_values = presence_checker(cafeSet, testColumn)"
    ]
   },
   {
@@ -535,8 +592,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testColumn = 'Price Per Unit'\n",
+    "testLength = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +651,7 @@
     "    return invalid_length\n",
     "\n",
     "# Example usage:\n",
-    "invalid_length = length_checker(cafeSet, 'Price Per Unit', 3)"
+    "invalid_length = length_checker(cafeSet, testColumn, testLength)"
    ]
   },
   {
@@ -590,8 +664,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testColumn = 'Payment Method'\n",
+    "valid_payment_methods = [\"Credit Card\", \"Cash\", \"Digital Wallet\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -628,10 +719,9 @@
     "    \n",
     "    return invalid_values\n",
     "\n",
-    "valid_payment_methods = [\"Credit Card\", \"Cash\", \"Digital Wallet\"]\n",
     "\n",
     "# Check Payment Method in cafeSet\n",
-    "lookup_errors = lookup_checker(cafeSet, 'Payment Method', valid_payment_methods)\n"
+    "lookup_errors = lookup_checker(cafeSet, testColumn, valid_payment_methods)\n"
    ]
   },
   {
