--- a/G48-A2.ipynb
+++ b/G48-A2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CSI4142 - Group 48 - Assignment 2\n",
+    "# CSI4142 - Group 48 - Assignment 2 - Part 1\n",
     "\n",
     "---\n",
     "\n",
@@ -361,7 +361,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Data Type Error\n",
+    "## Data Type Error - Using Cafe Dataset\n",
     "This is our first type of check, this is a data type check, which will make sure that the data entered into a field is respective of the typing of that column. \n",
     "\n",
     "### How To Use:\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
     " \n",
     "# Input your column from the above list. \n",
     "testColumn = attributes[3]\n",
-    "expectedType = \"numeric\""
+    "expectedType = float"
    ]
   },
   {
@@ -666,7 +666,7 @@
        "[533 rows x 8 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,19 +683,21 @@
     "        except:\n",
     "            return False \n",
     "\n",
-    "    # Identify mismatched types without modifying the column\n",
+    "    # This bit identifies the incorrect entries, making a new dataframe. \n",
     "    incorrect_types = df[~df[column].apply(is_expected_type)]\n",
     "\n",
-    "    # Output results\n",
+    "    # This right here controls the output for the reader of our report to see and understand. \n",
     "    print(f\"Checking column: {column} (Expected type: {expected_type.__name__})\")\n",
     "    if incorrect_types.empty:\n",
     "        print(f\"The Data Type Checker suggests all values in '{column}' match the expected data type.\")\n",
     "    else:\n",
+    "        # This outputs using the values set as parameters in the sentence. \n",
     "        print(f\"The Data Type Checker found {len(incorrect_types)} incorrect entries in '{column}'. \\nFor Example, here are some of the problem entries:\")\n",
-    "        display(incorrect_types[[column]].head(5))  # Show first 5 incorrect entries\n",
+    "        display(incorrect_types[[column]].head(5))  # Here we showcase some of the incorrect entries for the user.\n",
     "\n",
     "    return incorrect_types\n",
     "\n",
+    "# This starts the program and runs the function\n",
     "data_type_checker(cafeSet, testColumn, expectedType)"
    ]
   },
@@ -768,18 +770,21 @@
    "source": [
     "# Range Checker Test \n",
     "def range_checker(df, column, minimum, maximum):\n",
-    "    # Convert column to numeric, coerce errors to NaN\n",
+    "    # Converts columns to a numeric format, just to be sure. \n",
     "    numeric_col = pd.to_numeric(df[column], errors='coerce')\n",
     "    \n",
-    "    # Filter directly using the numeric column while ignoring NaNs\n",
+    "    # Filters here using the values inputted by the user to then comb through the dataset. \n",
     "    below_min = df.loc[(numeric_col < minimum) & numeric_col.notna()]\n",
     "    above_max = df.loc[(numeric_col > maximum) & numeric_col.notna()]\n",
     "    \n",
+    "    # these variables will help with the output statements \n",
     "    total_below = below_min.shape[0]\n",
     "    total_above = above_max.shape[0]\n",
     "    \n",
+    "    # General Print Statement: \n",
     "    print(f\"There are {total_below} data points with {column} less than {minimum}, and {total_above} data points with {column} over {maximum}.\")\n",
     "    \n",
+    "    # Specific statements to print examples:\n",
     "    if total_below > 0:\n",
     "        print(\"\\For Example: Rows with values below minimum:\")\n",
     "        print(below_min.head(2))  # Show first 2 rows\n",
@@ -788,7 +793,7 @@
     "        print(\"\\nFor Example: Rows with values above maximum:\")\n",
     "        print(above_max.head(2))  # Show first 2 rows\n",
     "\n",
-    "# Example usage:\n",
+    "# Running the function to showcase usage\n",
     "range_checker(cafeSet, test_attribute, minimum, maximum)"
    ]
   },
@@ -812,23 +817,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Please enter the various attrivutes below to perform the data cleaning process on the dataset. \n",
+    "# Please enter the various attributes below to perform the data cleaning process on the dataset. \n",
     "attributes = ['Transaction Date', 'Transaction Time', 'Card Number', 'Transaction ID']\n",
     "\n",
     "# Input your column \n",
     "column = attributes[0]\n",
     "\n",
-    "# Please enter the pattern you would like to check for:\n",
+    "# Please enter the regex pattern you would like to check for\n",
     "pattern = r'^\\d{4}-\\d{2}-\\d{2}$'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -855,17 +860,17 @@
     "# Format Check Test: \n",
     "\n",
     "def format_checker(df, column, pattern):\n",
-    "    # Compile the regex pattern\n",
+    "    # creating the regex pattern\n",
     "    regex = re.compile(pattern)\n",
     "    \n",
-    "    # Apply the regex pattern to the column and filter rows that don't match\n",
+    "    # Applying the regex pattern to the column and filters the rows that don't match\n",
     "    mismatched_rows = df[~df[column].astype(str).apply(lambda x: bool(regex.match(x)))]\n",
     "    total_mismatched = mismatched_rows.shape[0]\n",
     "    \n",
-    "    # Output in a nice neat sentence. \n",
+    "    # Printing the results of the format check. \n",
     "    print(f\"There are {total_mismatched} data points in {column} that do not match the format {pattern}. \\nSee below for examples if there are mismatched rows:\")\n",
     "    \n",
-    "    # Printing examples of mismatched rows\n",
+    "    # Outputting the mismatched rows for the user to see\n",
     "    if total_mismatched > 0:\n",
     "        print(\"\\nHere are some of the rows of mismatched format:\")\n",
     "        print(mismatched_rows.head(3))  \n",
@@ -914,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1236,28 +1241,29 @@
    "source": [
     "# Consistency Checker Test\n",
     "def consistency_checker(df, column_1, column_2, expected_column=None, compare_two=False):\n",
-    "    # Convert specified columns to numeric\n",
+    "    # Convert specified columns to numeric as we did above \n",
     "    df[column_1] = pd.to_numeric(df[column_1], errors='coerce')\n",
     "    df[column_2] = pd.to_numeric(df[column_2], errors='coerce')\n",
     "    \n",
     "    # Check if comparing two columns or two columns against one\n",
     "    if compare_two:\n",
-    "        # Compare two columns directly\n",
+    "        # Compare two columns directly for equality\n",
     "        inconsistent = df[df[column_1] != df[column_2]]\n",
+    "        # Formatting the string check type for the output\n",
     "        check_type = f\"{column_1} != {column_2}\"\n",
     "    \n",
-    "    # If there is no expected column, raise an error for the user:\n",
+    "    # If there is no expected column, raise an error for the user\n",
     "    else:\n",
     "        if expected_column is None:\n",
     "            raise ValueError(\"You must provide an expected column when compare_two=False.\")\n",
     "        \n",
-    "        # Converting it to numeric and then checking if the expected column is equal to the product of the two columns\n",
+    "        # Otherwise we convert it to numeric and then check if the expected column is equal to the product of the two columns\n",
     "        df[expected_column] = pd.to_numeric(df[expected_column], errors='coerce')\n",
     "        df['expected_value'] = df[column_1] * df[column_2]\n",
     "        inconsistent = df[df[expected_column] != df['expected_value']]\n",
     "        check_type = f\"{column_1} * {column_2} != {expected_column}\"\n",
     "    \n",
-    "    # Display results\n",
+    "    # Again, here we display results according to the findings\n",
     "    if inconsistent.empty:\n",
     "        print(f\"No consistency errors found for check: {check_type}.\")\n",
     "    else:\n",
@@ -1296,11 +1302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# attributes to choose from: \n",
     "attributes = ['Transaction ID', 'Item', 'Quantity', 'Price Per Unit', 'Total Spent', 'Payment Method', 'Location', 'Transaction Date']\n",
     "\n",
     "# Please enter the column you would like to perform the uniqueness check on from the above list: \n",
@@ -1418,13 +1424,14 @@
     "# Presence Checker Test\n",
     "def presence_checker(df, column):\n",
     "    \n",
-    "    # Checks if the column has any missing values or 'unknown' entries\n",
+    "    # Checks if the column has any missing values or unknown entries as they exist in the dataset. \n",
     "    missing = df[df[column].isna() | (df[column].str.lower() == 'unknown')]\n",
     "    \n",
-    "    # If nothing \n",
+    "    # If there is nothing \n",
     "    if missing.empty:\n",
     "        print(f\"The results of the presence checker indicate that there are no missing values found in '{column}'.\")\n",
     "    else:\n",
+    "        # Showcase the results in the dataset. \n",
     "        print(f\"The results of the presence check are as follows: There are {len(missing)} missing values in '{column}'. \\nFor Example:\")\n",
     "        print(missing[[column]].head(len(missing)))  \n",
     "    \n",
@@ -1448,12 +1455,12 @@
     "2. Run the code block with the comment \"Length Checker Test\" \n",
     "3. See results in the cell below the code block. \n",
     "\n",
-    "### Parameters"
+    "### Parameters:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,31 +1475,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The length checker test indicates that there are 3646 entries in 'Total Spent' that do not meet the length requirement of 3. \n",
+      "The length checker test indicates that there are 3975 entries in 'Total Spent' that do not meet the length requirement of 3. \n",
       "For Example:\n",
-      "   Total Spent\n",
-      "1         12.0\n",
-      "3         10.0\n",
-      "5         20.0\n",
-      "7         16.0\n",
-      "8         15.0\n"
+      "  Total Spent\n",
+      "1        12.0\n",
+      "2       ERROR\n",
+      "3        10.0\n",
+      "5        20.0\n",
+      "7        16.0\n"
      ]
     }
    ],
    "source": [
     "# Length Checker Test: \n",
     "def length_checker(df, column, length):\n",
-    "    # Convert column to string and check length\n",
+    "    # Converting the column to string and checking its length\n",
     "    invalid_length = df[df[column].astype(str).str.len() != length]\n",
     "    \n",
-    "    # Output results\n",
+    "    # Formatting the findings of the function to be results for the reader. \n",
     "    if invalid_length.empty:\n",
     "        print(f\"The length checker test suggests that all values in '{column}' meet the length requirement of {length}.\")\n",
     "    else:\n",
@@ -1564,7 +1571,7 @@
     "    # Check for invalid values in the column\n",
     "    invalid_values = df[~df[column].isin(valid_values)]\n",
     "    \n",
-    "    # Output results: \n",
+    "    # Formatting the results for the invalid_values, either if its empty or if there were found\n",
     "    if invalid_values.empty:\n",
     "        print(f\"The look-up test insists that all values in '{column}' are valid to the provided vales {valid_values}.\")\n",
     "    else:\n",
@@ -1600,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,12 +1616,14 @@
     "\n",
     "# Please input the columns you would like to check for an exact duplicate checker. \n",
     "columns_to_check = [attributes[0], attributes[5]]\n",
+    "\n",
+    "# Select the dataset. \n",
     "dataFrame = alteredCafeSet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1757,8 +1766,10 @@
     "    duplicates = df[df.duplicated(subset=subset_columns, keep=False)]\n",
     "\n",
     "    if duplicates.empty:\n",
+    "        # If there are no duplicates, this will be the output:\n",
     "        print(f\"No exact duplicates found based on columns: {subset_columns}.\")\n",
     "    else:\n",
+    "        # Creating a neat output for the results of the function. \n",
     "        print(f\"The checker indicates that there are {len(duplicates)} exact duplicate rows based on columns: {subset_columns}. \\n For example, find some of the duplicate rows below:\")\n",
     "        display(duplicates[subset_columns].head()) \n",
     "\n",
@@ -12011,18 +12022,19 @@
     "    sorted_df = df.sort_values(by=columns).reset_index(drop=True)\n",
     "    near_duplicates = []\n",
     "\n",
-    "    # Compare each row with the next one only (much faster)\n",
+    "    # Comparing each row with the next one row by row\n",
     "    for i in range(len(sorted_df) - 1):\n",
     "        row1 = sorted_df.iloc[i][columns]\n",
     "        row2 = sorted_df.iloc[i + 1][columns]\n",
     "\n",
-    "        # Count the number of differences\n",
+    "        # Counting the number of differences\n",
     "        differences = sum(row1 != row2)\n",
     "\n",
-    "        # If only 1 column differs, it's a near duplicate\n",
+    "        # If only # specified of column differs, it's a near duplicate\n",
     "        if differences == difference_in_column:\n",
     "            near_duplicates.append((i, i + 1, differences, row1.to_dict(), row2.to_dict()))\n",
     "\n",
+    "    # This outputs the information to the user, again as per the other 9 functions - this sets up either a nice & neat output with examples or a simple nothing found line.\n",
     "    if not near_duplicates:\n",
     "        print(\"No near duplicates found.\")\n",
     "    else:\n",
@@ -12047,7 +12059,7 @@
     "\n",
     "## Conclusion \n",
     "\n",
-    "Overall, this comprehensive clean data checker provides a strucutred approach to data validation and data cleaning. By integrating the ten essential checks,data type verification, range validation, format enforcement, consistency analysis, uniqueness detection, presence checks, length constraints, look-up validation, and exact and near duplicate detection. The functions in the notebook effectively indetify and highlight issues that are common in data science. This part of the assignment helped develop our skills as Data Scientists and has helped grow our python skills. \n",
+    "Overall, this comprehensive clean data checker provides a strucutred approach to data validation and data cleaning. By integrating the ten essential checks,data type verification, range validation, format enforcement, consistency analysis, uniqueness detection, presence checks, length constraints, look-up validation, and exact and near duplicate detection. The functions in the notebook effectively identify and highlight issues that are common in data science. This part of the assignment helped develop our skills as Data Scientists and has helped grow our python skills. \n",
     "\n",
     "### References\n",
     "1. Winter2025-CSI4142-Week4-DataQuality-Cleaning-Part1\n",
