--- a/G48-A2-P2.ipynb
+++ b/G48-A2-P2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,70 @@
     "import seaborn as sns\n",
     "\n",
     "df = pd.read_csv(\"Housing.csv\")  # Make sure the file is in the same directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Existing Housing.csv found. Deleting and re-extracting...\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100 10027    0 10027    0     0  29672      0 --:--:-- --:--:-- --:--:-- 29753\n",
+      "Extracting dataset...\n",
+      "Archive:  housing-prices-dataset.zip\n",
+      "  End-of-central-directory signature not found.  Either this file is not\n",
+      "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
+      "  latter case the central directory and zipfile comment will be found on\n",
+      "  the last disk(s) of this archive.\n",
+      "unzip:  cannot find zipfile directory in one of housing-prices-dataset.zip or\n",
+      "        housing-prices-dataset.zip.zip, and cannot find housing-prices-dataset.zip.ZIP, period.\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "Dataset not found: Housing.csv. Ensure the ZIP file was correctly extracted.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Verify that the CSV exists after extraction\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(csv_path):\n\u001b[0;32m---> 21\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDataset not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcsv_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m. Ensure the ZIP file was correctly extracted.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# Load dataset\u001b[39;00m\n\u001b[1;32m     24\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_path)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: Dataset not found: Housing.csv. Ensure the ZIP file was correctly extracted."
+     ]
+    }
+   ],
+   "source": [
+    "#Download Function for the Housing Dataset\n",
+    "\n",
+    "# Define paths\n",
+    "zip_path = \"housing-prices-dataset.zip\"\n",
+    "csv_path = \"Housing.csv\"\n",
+    "\n",
+    "# Delete existing CSV if present\n",
+    "if os.path.exists(csv_path):\n",
+    "    print(f\"Existing {csv_path} found. Deleting and re-extracting...\")\n",
+    "    os.remove(csv_path)\n",
+    "\n",
+    "# Download dataset using curl (Bash command in Jupyter Notebook)\n",
+    "!curl -L -o {zip_path} https://www.kaggle.com/api/v1/datasets/download/yasserh/housing-prices-dataset\n",
+    "\n",
+    "# Extract the ZIP file in the current folder\n",
+    "print(\"Extracting dataset...\")\n",
+    "!unzip -o {zip_path} -d .\n",
+    "\n",
+    "# Verify that the CSV exists after extraction\n",
+    "if not os.path.exists(csv_path):\n",
+    "    raise FileNotFoundError(f\"Dataset not found: {csv_path}. Ensure the ZIP file was correctly extracted.\")\n",
+    "\n",
+    "# Load dataset\n",
+    "df = pd.read_csv(csv_path)\n",
+    "print(\"Dataset loaded successfully.\")\n",
+    "df.head()"
    ]
   },
   {
